@@ -36,6 +36,7 @@ Agregado tipo de medidor Esfera en Ver Sensores
 Mejorada compilación: opciones --enable-memptr --enable-visualmem --enable-cpustats están activadas por defecto en ./configure
 Mejorada emulación del Inves Spectrum+: alertar cuando un juego puede resetearse debido al bug de Inves de write-on-interrupt
 Mejorado el core de emulación de Spectrum de la CPU Z80: agregado estado wait (necesario para emular el microdrive)
+Permitir grabar snapshots .Z80 de TC2048
 
 Mejorada emulación de Hilow Datadrive:
 - Agregada emulación en crudo (raw), como el dispositivo real
